Revise README for Diabetes Patient Management App
Updated project overview, features, achievements, tech stack, and setup instructions in README.md.